fix(intro): decrease font-size and gap mobile

--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -45,7 +45,7 @@
     padding: 1.25rem 0;
 
     @include down(md) {
-      padding: 1rem 0;
+      padding: 0.25rem 0;
     }
   }
 
@@ -59,6 +59,7 @@
 
     @include down(md) {
       gap: 2rem;
+      padding-bottom: 0.5rem;
     }
   }
 
@@ -66,7 +67,7 @@
     flex: none;
     font-family: $font-primary;
     font-weight: $font-regular;
-    font-size: clamp(2.25rem, 4.25vw, 5.5rem);
+    font-size: clamp(2.1875rem, 4.25vw, 5.5rem);
     line-height: 100%;
     letter-spacing: 0;
     text-transform: uppercase;
@@ -77,7 +78,7 @@
     }
 
     @include down(md) {
-      font-size: clamp(1.75rem, 7vw, 2.5rem);
+      font-size: 2.1875rem;
     }
 
     @include up(ultra) {
